test/spec/import-after-func.fail.txt
;;; ERROR: 1
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/import-after-func.fail.wast
(;; STDERR ;;;
Error running "wast2wasm":
out/third_party/testsuite/import-after-func.fail.wast:1:16: imports must occur before all non-import definitions
(module (func) (import "" "" (memory 0)))
               ^^^^^^^^^^^^^^^^^^^^^^^^^
;;; STDERR ;;)
